welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: type mismatch;
 found   : Int
 required: java.awt.Color
		setCouleurBrosse(j+1)
                                  ^